# ads-search-rec-llm-systems

ctr_llm_creative/: .env.example  .gitignore  CONTRIBUTING.md  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  analyze_psi.py  analyze_stage5b.py  example_oov_analysis.py  pyproject.toml  requirements.txt  run_avazu_dry.py  run_avazu_dry_large.py  run_main_test.py  verify_ctr_by_group.py  verify_oov_rate.py  verify_temporal_ctr.py
ctr_llm_creative/.github/: copilot-instructions.md
ctr_llm_creative/configs/_base/: base.yaml
ctr_llm_creative/configs/datasets/: ali_ccp.yaml  avazu.yaml  avazu_parquet_v1.yaml  ipinyou.yaml
ctr_llm_creative/configs/evaluation/: bootstrap.yaml
ctr_llm_creative/configs/experiments/: ali_ccp_esmm_crossday.yaml  avazu_infra_deepfm.yaml  ipinyou_closedloop.yaml
ctr_llm_creative/configs/features/: ali_ccp_crossday.yaml  avazu_hash.yaml
ctr_llm_creative/configs/models/: deepfm.yaml  esmm.yaml
ctr_llm_creative/configs/simulation/: base_2nd_price.yaml  bidding_ecpm.yaml
ctr_llm_creative/contracts/: __init__.py  auction_stream.py  dataset_manifest.py  feature_map.py  metrics.py  run_meta.py
ctr_llm_creative/scripts/: download_datasets.sh  prepare_data.py  run_experiment.sh
ctr_llm_creative/src/: __init__.py
ctr_llm_creative/src/analysis/: __init__.py  bootstrap.py  calibration_analyzer.py  offline_online_gap.py  report_builder.py
ctr_llm_creative/src/api/: __init__.py  app.py  routes_runs.py  schemas.py
ctr_llm_creative/tests/: test_auction_second_price.py  test_end2end_toy.py  test_feature_map_consistency.py
(+65 files in other folders)
