[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctr-llm-creative"
version = "0.1.0"
description = "CTR/LLM Prediction, Simulation & Evaluation Platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Team", email = "your_email@example.com"}
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "pydantic>=1.10.0",
    "hydra-core>=1.2.0",
    "omegaconf>=2.2.0",
    "pyyaml>=6.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "pytest>=7.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=5.0.0",
    "isort>=5.11.0",
    "mypy>=1.0.0",
]

notebook = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.5.0",
    "ipywidgets>=8.0.0",
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
